# viaduct-he

./: .gitignore  Cargo.toml  README.md  build.rs  input2.txt  input5.txt  inputs-matmul.json  inputs-permute.json  inputs.json  log.txt  matmul2.txt  pyseal_template.txt  set-union.txt  template-test.txt  template.txt  test_template.txt
.github/workflows/: rust.yml
bench/: roberts-cross-8x8.txt
benchmarks/: blur.tlhe  blur2.tlhe  conv-stride2.tlhe  conv.tlhe  copse.tlhe  distance.tlhe  input-circ.txt  input3-circ.txt  input4-circ.txt  matmul.tlhe  matmul2-2.tlhe  matmul2.tlhe  retrieval-1024.tlhe  retrieval-256.tlhe  retrieval-noinline.tlhe  retrieval.tlhe  set-union-noinline.tlhe  set-union.tlhe
benchmarks/porcupine/: boxblur.tlhe  dotprod.tlhe  gx.tlhe  gy.tlhe  hamming.tlhe  harris.tlhe  l2dist.tlhe  linreg.tlhe  polyreg.tlhe  robertscross.tlhe  sobel.tlhe
evaluation/: baseline-conv-multioutput.py  baseline-conv.py  baseline-distance.py  baseline-exec-exp.json  baseline-exec-test-exp.json  baseline-exec-test.json  baseline-exec.csv  baseline-exec.json  baseline-matmul-2.py  baseline-retrieval-1024.py  baseline-retrieval-256.py  baseline-set-union-128.py  baseline-set-union-16.py  baseline-set-union-32.py  bench-exec.txt  bench-ops-16384.py  bench-ops-2048.py  bench-ops-4096.py  bench-ops-8192.py  benchmark.py  benchmarks.md  chet-matmul-2-exec-exp.json  chet-matmul-2-exec.csv  chet-matmul-2-exec.json  conv-simo.tlhe  e1-o0-compile-exp-old.json  e1-o0-compile-exp.json  e1-o0-compile-test-exp.json  e1-o0-compile-test.json  e1-o0-compile.csv  e1-o0-compile.json  e1-o0-conv-multioutput.py  e1-o0-conv-simo.py  e1-o0-conv-siso.py  e1-o0-conv.py  e1-o0-distance.py  e1-o0-exec-exp.json  e1-o0-exec.csv  e1-o0-exec.json  e1-o0-matmul-2-2.py  (+69 more)
runtime/: Pipfile  normalizer.py  runtime.py  schedule.py  schedule2.py
src/: circ.rs  circ2.rs  lang.rs  lib.rs  main.rs  optimizer.rs  parser.lalrpop  program.rs  scheduling.rs  toposort_extractor.rs  util.rs
src/circ/: array_materializer.rs  circ_gen.rs  cost.rs  lowering.rs  materializer.rs  optimizer.rs  partial_eval.rs  plaintext_hoisting.rs  pseudomaterializer.rs  vector_deriver.rs  vector_info.rs
src/circ2/: cost.rs  materializer.rs  vector_info.rs
src/ir/: expr.rs  instr.rs  lowered.rs  mod.rs
tests/: test_circ_gen.rs  test_compilation.rs  test_compile.rs  test_optimizer.rs  test_parser.rs  test_typechecker.rs  tests.rs
(+581 files in other folders)
