[package]
name = "he_vectorizer"
author = "Rolph Recto"
about = "vectorizer for homomorphic encryption circuits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "he_vectorizer"
path = "src/lib.rs"

[[bin]]
name = "he_vectorizer"
path = "src/main.rs"

[build-dependencies]
lalrpop = "0.19.8"

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
egg = { version = "0.9.0", features = ["lp", "serde-1"] }
env_logger = "0.9.0"
gcollections = "1.5.0"
good_lp = "1.3.2"
handlebars = "4.3.3"
im = { version = "15.1.0", features = ["serde"] }
intervallum = "1.4.0"
lalrpop-util = { version = "0.19.8", features = ["lexer"] }
log = "0.4.17"
rand = "0.8.5"
regex = "1"
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
