[package]
name = "viaducthe"
author = "Rolph Recto"
about = "compiler from array programs to vectorized homomorphic encryption"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "viaducthe"
path = "src/lib.rs"

[[bin]]
name = "viaducthe"
path = "src/main.rs"

[build-dependencies]
lalrpop = "0.19.8"

[dependencies]
bimap = "0.6.2"
clap = { version = "3.2.16", features = ["derive"] }
coin_cbc = "0.1.7"
disjoint-sets = "0.4.2"
egg = { version = "0.9.0", features = ["lp"] }
env_logger = "0.9.0"
gcollections = "1.5.0"
good_lp = "1.3.2"
handlebars = "4.3.3"
im = { version = "15.1.0" }
indexmap = "1.9.2"
intervallum = "1.4.0"
itertools = "0.9.0"
lalrpop-util = { version = "0.19.8", features = ["lexer"] }
log = "0.4.17"
pretty = "0.11.3"
priority-queue = "1.3.1"
rand = "0.8.5"
regex = "1"
serde = { version = "1.0.142", features = ["derive"] }
